# coolth

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  app.manifest
arduino_nano/: fan_controller.ino
arduino_nano/enclosure/: enclosure_bottom.stl  enclosure_top.stl
arduino_nano/gerber/: copper_bottom.gbr  copper_top.gbr  drill_1_16.xln  gerber_job.gbrjob  profile.gbr  silkscreen_top.gbr  soldermask_bottom.gbr  soldermask_top.gbr
bbmp_windows/: CMakeLists.txt
bbmp_windows/src/: main.cpp
bbmp_windows/src/bbmp_windows/bbmp/: child_process.cpp  child_process.h  fan_controller_communicator.h  line_reader.cpp  line_reader.h  logging.cpp  logging.h  recreate_on_failure.h  serial.cpp  serial.h  stringstream.cpp  stringstream.h  windows_handles.cpp  windows_handles.h
installer/: coolth.iss  license.txt
scripts/: bbmp_subprocess.py  bbmp_util.py  build_everything.py
src/: graph_main.cpp  graph_main_component.cpp  graph_main_component.h  juce_priorizable_thread.h  main.cpp  main_component.cpp  main_component.h  settings.h
src/components/: custom_slider.cpp  custom_slider.h  graph_editor.cpp  graph_editor.h  log_component.cpp  log_component.h  multi_graph_editor.cpp  multi_graph_editor.h
temperature_reader/: temperature_reader.sln
temperature_reader/temperature_reader/: Program.cs  temperature_reader.csproj
temperature_reader/temperature_reader/Properties/: AssemblyInfo.cs
